<resources>
    <string name="app_name">KHDD</string>
    <string name="dialog_select_prompt">사진 선택</string>
    <string name="dialog_select_gallery">앨범</string>
    <string name="dialog_select_camera">카메라</string>
    <string name="title">HandNote</string>
    <string name="command">아래 버튼을 눌러 사진을 선택하세요.</string>
    <string name="ImageDescription">Image to Read Text</string>
    <string name="image_picker_error">사진 선택 에러</string>
    <string name="loading_message">처리중..</string>
    <string name="ImagePreprocessed">Image Preprocessed</string>
    <string name="btn_copy">텍스트 복사</string>
    <string name="btn_pdf">PDF 만들기</string>
    <string name="btn_previous">이전</string>
    <string name="btn_next">다음</string>
    <string name="tv_edit_title">텍스트 편집</string>
    <string name="tv_alignmenttext">텍스트 정렬</string>
    <string name="btn_leftalign">왼쪽</string>
    <string name="btn_centeralign">가운데</string>
    <string name="btn_rightalign">오른쪽</string>
    <string name="btn_save">저장</string>
    <string name="btn_delete">삭제</string>
    <string name="pdfListString">PDF 파일 목록</string>
</resources>
