<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <!--<org.opencv.android.JavaCameraView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/activity_surface_view" />-->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/commandText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/command"
            android:textColor="#000000"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imgToRead"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/ImageDescription" />

        <ImageView
            android:id="@+id/imgPrep"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/ImagePreprocessed"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/ImageDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:scrollbars="vertical"
            android:text=""
            android:textColor="#000000"
            android:textSize="13sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_copy" />

        <Button
            android:id="@+id/btn_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pdf" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_menu_gallery" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>